--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -114,6 +114,18 @@
 
       <!-- Clyfford Still (American, 1904–1980). PH-48 (1957-D-No. 1), 1957. Oil on canvas, 113 x 159 inches (287 x 403.9 cm). Collection Albright-Knox Art Gallery, Buffalo, New York; Gift of Seymour H. Knox, Jr., 1959 (K1959:26). © 2016 City and County of Denver / Artists Rights Society (ARS), New York. -->
 
+      <div class="clear">
+
+        <div class="quote" id="footnotes">
+          <p class="small"><sup>1</sup> Lightfoot, Norman R. <em>Images of the Wild</em> (1978) National Film Board of Canada.</p>
+          <p class="small"><sup>2</sup> Archibold, Rick. <em>Robert Bateman: An Artist in Nature</em> (1990) Madison Press Books.</p>
+
+          <!-- “Bateman captures a moment in time, a moment that could have happened, but did not.” -->
+          <!-- Roger Tory Peterson ?? -->
+
+        </div>
+      </div>
+
       <div>
         <h3>Abstract Impressionism</h3>
         <p>There are elements of Abstract Impressionism and Abstract Expressionism that carry into a Naturalist approach to painting animals and their natural habitats. Bateman describes his attempt at representing the shape of grass, &ldquo;painting the form of the clumps of grass like a pan of muffins, shading each clump and then filling in the details in between.&rdquo; This effect is achieved partly with an attention to light and shadow, and partly with just enough detail to create an illusion of reality. Your imagination is invited to fill in the rest.</p>
@@ -152,7 +164,7 @@
       </div>
 
       <div>
-        <p>This extreme of Abstract Expressionism is reminiscent of Chinese or Japanese calligraphy. Like the art of calligraphy, the texture of the brush strokes in Abstract Expressionist and Abstract Impressionist art has an intentionality. The thickness of the paint medium and the weight of each stroke adds a directional, textural aesthetic. These pronounced qualities almost preserve a record of movement in space and time. Like timelapse photography, there is an impression of motion. These paintings are often referred to as action paintings because the layered, textured appearance characterizes the painter in motion in front of the canvas.<sup>&nbsp;[<a class="button" onclick="fn();" title="D'Augustine, 2010.">3</a>]</sup></p>
+        <p>This extreme of Abstract Expressionism is reminiscent of Chinese or Japanese calligraphy. Like the art of calligraphy, the texture of the brush strokes in Abstract Expressionist and Abstract Impressionist art has an intentionality. The thickness of the paint medium and the weight of each stroke adds a directional, textural aesthetic. These pronounced qualities almost preserve a record of movement in space and time. Like timelapse photography, there is an impression of motion. These paintings are often referred to as action paintings because the layered, textured appearance characterizes the painter in motion in front of the canvas.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="D'Augustine, 2010.">3</a>]</sup></p>
 
         <p class="linebreak">I look to appropriate these painterly aesthetics into a selection of studio works with cold wax and other impasto mediums and so on.</p>
 
@@ -171,7 +183,7 @@
       </div>
 
       <div> -->
-        <p class="linebreak">This diptych is designed with a minimal palette, holding back on the use of color, and reducing the darks and lights to a pattern of mid-tones. This minimal palette is, in part, a technical exercise like Bob took on with <em>Midnight &ndash; Black Wolf</em> (acrylic color, 1989) and again with <em>White Encounter &ndash; Polar Bear</em> (acrylic color, 2005). Robert Bateman describes the challenge to paint most of a painting within a limited range of off-whites, &ldquo;like a composition on a piano in four notes high in the tonal treble clef.&ldquo; And <em>Midnight &ndash; Black Wolf</em> was the opposite challenge, &ldquo;to do most of the painting in four notes of the bass clef.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Bateman, .">4</a>]</sup></p>
+        <p class="linebreak">This diptych is designed with a minimal palette, holding back on the use of color, and reducing the darks and lights to a pattern of mid-tones. This minimal palette is, in part, a technical exercise like Bob took on with <em>Midnight &ndash; Black Wolf</em> (acrylic color, 1989) and again with <em>White Encounter &ndash; Polar Bear</em> (acrylic color, 2005). Robert Bateman describes the challenge to paint most of a painting within a limited range of off-whites, &ldquo;like a composition on a piano in four notes high in the tonal treble clef.&ldquo; And <em>Midnight &ndash; Black Wolf</em> was the opposite challenge, &ldquo;to do most of the painting in four notes of the bass clef.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Bateman, .">4</a>]</sup></p>
 
       </div>
 
@@ -207,12 +219,27 @@
 
         <p><em>The message is not the only reason to paint a painting.</em> Any painting can be a work of art. An impasto painting has the physicality to stand on its own aesthetic. For a Naturalist painter, however, the message is rarely far from the surface. For Robert Bateman, each painting in a way preserves a piece of a disappearing world. Bob concluded his &lsquo;Artist's Statement&rsquo; in his <em>new</em> book <em>New Works</em> (2010):</p>
 
-        <div>
+        <div class="clear-bottom">
           <p><b class="color">&ldquo;</b>Perhaps, in some small way, I can raise the public consciousness about the value of those things that are vanishing and encourage people to protect our world for the future.<b class="color">&rdquo;</b></p>
 
         </div>
 
-        <h3 class="linebreak">The Forest</h3>
+      </div>
+
+      <div class="clear">
+
+        <div class="quote" id="footnotes-2">
+          <p class="small"><sup>3</sup> D'Augustine, Corey. <em>In the Studio</em> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video Link</a></p>
+          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website Link</a></p>
+
+          <!-- YouTube Series of Bateman talks ?? -->
+
+        </div>
+      </div>
+
+      <div>
+
+        <h3>The Forest</h3>
         <p>When painting a natural environment, for example a forest, what separates the trees from the forest is a sense of atmosphere. A misty morning. A dusty day. A partly opaque, particulated air that obfuscates or reflects the light source. This aesthetic appeals to Naturalist painters because of how mist or dust describes &ndash; and separates &ndash; the layers of a landscape.</p>
 
         <p class="linebreak">Atmosphere is about space and the feeling of depth within that space. In a Naturalist painting there is depiction of the air&mdash;the vast volumes into the distance, the spaces between the trees, and the pathways through clumps of grass and so on.</p>
@@ -236,23 +263,25 @@
       </div>
 
       <div>
-        <p>Forests on earth and in the sea are our most precious natural resource. The boreal forest is estimated to hold hundreds of billions of trees with more than forty per cent of the carbon stored on Earth. Our forests are a fundamental element in the fight against climate change.<sup>&nbsp;[<a class="button" onclick="fn();" title="Attenborough, 2019.">5</a>]</sup></p>
+        <p>Forests are our most precious natural resource. The Amazon rainforest and Congo rainforest are two of the most important wilderness areas we have today. There are many other forests on land and in the sea. The boreal forest however is estimated to hold hundreds of billions of trees with more than forty per cent of the carbon stored on Earth. Our forests are fundamental in the fight against climate change.<sup>&nbsp;[<a class="button" onclick="fn_3();" title="O'Donovan, 2019.">5</a>]</sup></p>
 
-        <p class="linebreak">In his book of &lsquo;Plates and Commentaries&rsquo; published in 1990, <em>Robert Bateman: An Artist in Nature</em>, Bateman forewarned the importance of forests in the twenty-first century:</p>
+        <!-- There are also forests in the sea. Kelp forests and then there are coral reefs, <em>the rainforests of the sea</em>. -->
+
+        <p class="linebreak">Bob Bateman, in his book of &lsquo;plates and commentaries&rsquo; published in 1990, <em>Robert Bateman: An Artist in Nature</em>, forewarned the importance of forests in the twenty-first century:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>Their continued destruction, whether in Europe, China, the Amazon or the Pacific northwest is one of the most serious challenges of conservationists. The amount of forest we have left by the beginning of the next century will have a lot to do with how livable our planet will be for our children and grandchildren.<b class="color">&rdquo;</b></p>
 
         </div>
 
-        <p>The same will apply to the twenty-second century. The same will apply to the next decade. Our inactions and insufficient actions to mitigate a mass extinction of biological diversity on Earth has brought our very human world to the very brink of climate catastrophe.</p>
+        <p>The same can be said of the twenty-second century. The same can be said of the next decade. Our inactions or insufficient actions to mitigate a mass extinction of biological diversity on this planet &ndash; <em>our planet</em> &ndash; has brought our very human world to the very brink of climate catastrophe.</p>
 
         <h3 class="linebreak">The Trees</h3>
         <p><em>We need to plant trees. We need to make sure that trees grow. And making sure that trees grow is more complicated than planting them.</em></p>
 
-        <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. There is a problem with the extractive, myopic economic models of industrial aggriculture and industrial forestry and so on. And then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
+        <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. It is the problem with the extractive, myopic economic model of industrial aggriculture and industrial forestry and so on. Then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
 
-        <p class="linebreak">Our best step forward is to stop cutting down the healthy forests that we have left. This means law enforcement needs to put and end to illegal logging, and consumers with purchasing power need to boycott the companies that are driving deforestation. Also, we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a history of being stewards of the natural world. And where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
+        <p class="linebreak">Our best step forward is to stop cutting down the healthy forests we have today. This means law enforcement needs to put and end to illegal logging. Consumers with purchasing power need to boycott the companies that are driving deforestation. And we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a history of being stewards of the natural world. Where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
 
       </div>
 
@@ -263,25 +292,15 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~02/photo/the-globe-and-mail.canada.boreal-forest.jpg" />
-        <p class="text-right gutter-side">&lsquo;Canada's boreal forest&rsquo; [<a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" rel="noopener" target="_blank" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)">theglobeandmail.com</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Canada's boreal forest&rsquo;<sup>&nbsp;[<a class="button" onclick="fn_3();" title="Galloway, 2011.">6</a>]</sup></p>
 
       </div>
 
       <div class="clear">
 
-        <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Lightfoot, Norman R. <em>Images of the Wild</em> (1978) National Film Board of Canada.</p>
-          <p class="small"><sup>2</sup> Archibold, Rick. <em>Robert Bateman: An Artist in Nature</em> (1990) Madison Press Books.</p>
-          <p class="small"><sup>3</sup> D'Augustine, Corey. <em>In the Studio</em> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video Link</a></p>
-          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website Link</a></p>
+        <div class="quote" id="footnotes-3">
           <p class="small"><sup>5</sup> O'Donovan, Kieran. <em>Our Planet</em> (2019) Silverback Films, Netfilx <a href="../../../url/www/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website Link</a></p>
-
-          <!-- YouTube Series of Bateman talks ?? -->
-
-          <!-- “Bateman captures a moment in time, a moment that could have happened, but did not.” -->
-          <!-- Roger Tory Peterson ?? -->
-          
-          <!-- The Globe And Mail ?? -->
+          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website Link</a></p>
 
         </div>
       </div>
@@ -350,6 +369,8 @@
   };
 
   function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
+  function fn_2() { document.querySelector( "#footnotes-2" ).scrollIntoView({ behavior: 'smooth' }); };
+  function fn_3() { document.querySelector( "#footnotes-3" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
