--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -58,7 +58,6 @@
       </div>
 
       <div>
-
         <h3>Teeth and Tusks</h3>
         <p>An elephant only has four molars at any one time, with two on top and two on bottom. These molars are located along both sides of the upper and lower jaw. Each molar is the size of a brick, and weighs up to about twenty pounds. An elephant can only grow six sets of these molars in a lifetime. These molars grind away from use all day, everyday. When the sixth set of molars is worn down from forever chewing fodder, the elephant is soon to starve, unable to supplement a diet with tree bark and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
@@ -97,7 +96,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
 
       </div>
 
@@ -128,7 +127,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
 
         <!-- attacking randomly -->
         <!-- , including humans, and the danger of such a state should never be underestimated -->
